<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#BF000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/previous_operand_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.70"
            android:gravity="end"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:text="78722" />

        <TextView
            android:id="@+id/current_operand_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            tools:text="2983.09" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#B3FFFFFF">

        <Button
            android:id="@+id/all_clear_button"
            style="@style/buttonStyle"
            android:layout_weight="2"
            android:text="@string/ac"
            android:textSize="26sp" />

        <Button
            android:id="@+id/delete_button"
            style="@style/buttonStyle"
            android:text="@string/del"
            android:textSize="26sp" />

        <Button
            android:id="@+id/divide_button"
            style="@style/buttonStyle"
            android:text="@string/divide" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#B3FFFFFF">

        <Button
            android:id="@+id/one_button"
            style="@style/buttonStyle"
            android:text="@string/one" />

        <Button
            android:id="@+id/two_button"
            style="@style/buttonStyle"
            android:text="@string/two" />

        <Button
            android:id="@+id/three_button"
            style="@style/buttonStyle"
            android:text="@string/three" />

        <Button
            android:id="@+id/multiply_button"
            style="@style/buttonStyle"
            android:text="@string/multiply"
            android:textSize="45sp" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#B3FFFFFF">

        <Button
            android:id="@+id/four_button"
            style="@style/buttonStyle"
            android:text="@string/four" />

        <Button
            android:id="@+id/five_button"
            style="@style/buttonStyle"
            android:text="@string/five" />

        <Button
            android:id="@+id/six_button"
            style="@style/buttonStyle"
            android:text="@string/six" />

        <Button
            android:id="@+id/add_button"
            style="@style/buttonStyle"
            android:text="@string/add" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#B3FFFFFF">

        <Button
            android:id="@+id/seven_button"
            style="@style/buttonStyle"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight_button"
            style="@style/buttonStyle"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine_button"
            style="@style/buttonStyle"
            android:text="@string/nine" />

        <Button
            android:id="@+id/subtract_button"
            style="@style/buttonStyle"
            android:text="@string/subtract" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#B3FFFFFF">

        <Button
            android:id="@+id/point_button"
            style="@style/buttonStyle"
            android:text="@string/point" />

        <Button
            android:id="@+id/zero_button"
            style="@style/buttonStyle"
            android:text="@string/zero" />

        <Button
            android:id="@+id/equal_button"
            style="@style/buttonStyle"
            android:layout_weight="2"
            android:text="@string/equal" />

    </LinearLayout>

</LinearLayout>